class_name DealerActionBar extends HBoxContainer


signal dealer_shuffle
signal dealer_swap_back
signal dealer_mark


func _on_shuffle_pressed() -> void:
	pass # 


func _on_swap_back_pressed() -> void:
	pass # Replace with function body.


func _on_mark_pressed() -> void:
	pass # Replace with function body.
